fix: hide scrollbar
- Also create newsfeed section files

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,11 +15,20 @@ section {
 }
 
 /**** GENERAL STYLING ****/
+
+html {
+	overflow: hidden;
+}
+
 body {
 	background-color: var(--clr-black);
 	font-family: var(--ff-paragraph);
 	color: var(--clr-white);
-	/* overflow-y: hidden; */
+	overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+	display: none;
 }
 
 h1 {
